Scrape bp site and create endpoint for scraper
