# controllers/document.go
@@ -41,7 +41,7 @@ type Field struct {
 // @Param Body body models.Articles true "The body to create a Redis document for an article"
 // @Success 201 {object} models.Articles
 // @Failure 422
-// @Router /api/documents [post]
+// @Router /api/document/article [post]
 func (rdb *RedisDB) PostDocuments(w http.ResponseWriter, r *http.Request) {
 	var articles models.Articles
 	body, err := ioutil.ReadAll(io.LimitReader(r.Body, 1048576))
